Basic content added

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Fun Homepage</title>
   </head>
   <body>
-    Test 123
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div>
+      <h1>Fun Projects Homepage</h1>
+      <p>This webpage contains a few projects I did as an excuse to learn some web development tools and 
+        have a little fun.</p>
+    </div>
+    <div>
+      <a href="https://sal-adrian.github.io/SecondReview/"><h2>Second Review</h2></a>
+    </div>
   </body>
 </html>
