Finished contents for homepage

--- a/index.html
+++ b/index.html
@@ -2,17 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <title>Fun Homepage</title>
   </head>
+  <style type="text/css">
+    body { background: #424874 !important; 
+    color: #F4EEFF !important;}
+    .posts { background: #DCD6F7 !important; 
+      border: 4px solid #A6B1E1 !important;
+      border-radius: 25px !important; }
+  </style>
   <body>
-    <div>
-      <h1>Fun Projects Homepage</h1>
-      <p>This webpage contains a few projects I did as an excuse to learn some web development tools and 
+    <div class="text-center my-5 mx-5">
+      <h1 class="my-4">Fun Projects Homepage</h1>
+      <p>A few projects I did as an excuse to learn some web development tools and 
         have a little fun.</p>
     </div>
-    <div>
-      <a href="https://sal-adrian.github.io/SecondReview/"><h2>Second Review</h2></a>
+    <div class="posts text-center py-4 mx-5">
+      <a class="btn btn-warning my-3 mx-3" href="https://sal-adrian.github.io/SecondReview/"><h2>Second Review</h2></a>
     </div>
   </body>
 </html>
