Fixed color of border

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body { background: #424874 !important; 
     color: #F4EEFF !important;}
     .posts { background: #DCD6F7 !important; 
-      border: 4px solid #A6B1E1 !important;
+      border: 4px solid #DCD6F7 !important;
       border-radius: 25px !important; }
   </style>
   <body>
